fixed the view structure, stuck at re-render, passing state to child would like to cause a render

--- a/frontend/amrgl/src/App.css
+++ b/frontend/amrgl/src/App.css
@@ -17,13 +17,6 @@
   color: #61dafb;
 }
 
-.Scaleline{
-  position: absolute; 
-  bottom: 3%;
-  left: 50%;
-  z-index: 9999;
-  transform: translate(-50%, -50%);
-}
 
 .Footer{
   position: absolute; 
